Fix dynamic content near footer not showing

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -8,7 +8,7 @@
 .events {
   font-family: 'Work Sans', sans-serif;
   width: 70%;
-  margin: 0 auto;
+  margin: 0 auto 5em auto;
 
   h1 {
     padding: 1em 0;
